--- a/cafe/package.json
+++ b/cafe/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/bundle.js",
   "scripts": {
-    "build": "gulp default"
+    "build": "node_modules/typescript/bin/tsc --module commonjs index.ts"
   },
   "dependencies": {
     "waiter": "../waiter",
@@ -11,10 +11,6 @@
     "cook": "../cook"
   },
   "devDependencies": {
-    "browserify": "~5.12.0",
-    "gulp": "~3.8.8",
-    "vinyl-source-stream": "~1.0.0",
-    "minifyify": "~4.2.0",
-    "tsify": "~0.4.0"
+    "typescript": "https://github.com/Nemo157/TypeScript/releases/download/v1.1.0-nodemodules/typescript-1.1.0-nodemodules.tgz"
   }
 }
