--- a/barista/package.json
+++ b/barista/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "typescript": {
-    "main": "src/index.js"
+    "main": "src/index.ts"
   },
   "scripts": {
-    "build": "tsc --module commonjs --outDir dist --sourceMap src/index.ts"
+    "build": "node_modules/typescript/bin/tsc --module commonjs --outDir dist --sourceMap src/index.ts"
   },
   "dependencies": {
     "when": "3.3.1",
